--- a/panel.html
+++ b/panel.html
@@ -9,15 +9,10 @@
     <h1>Panelim</h1>
     <button onclick="exit()">Çıkış Yap</button>
     <script src="index.js"></script>  
+    <script src="auth.js"></script>  
+
     <script>
-        var exit = () =>{
-            localStorage.removeItem("giris")
-            window.location.href="login.html"
-        }
-        if (localStorage.getItem("giris") == null) {
-            window.location.href="login.html"
-            
-        }
+
     </script> 
 </body>
 </html>
